--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             height: 200px;
             position: absolute; /* Đặt bông hoa ở vị trí tuyệt đối */
             left: 45%; /* Căn giữa theo chiều ngang */
-            bottom: 100px; /* Cách dưới 70px */
+            bottom: 120px; /* Cách dưới 70px */
             transform: translate(-50%, 0); /* Dịch chuyển sang trái 50% chiều rộng của bông hoa để căn giữa */
             animation: yidon 3s infinite; /* Giảm thời gian hoạt ảnh */
         }
@@ -180,7 +180,7 @@
     <div class="container">
         <div class="letter">
             <h1>Happy Vietnamese Women's Day</h1>
-            <div class="wish">Chúc mẹ 20/10 vui vẻ, có thật nhiều may mắn, lúc nào cũng xinh đẹp và có nhiều niềm vui trong cuộc sống.</div> <!-- Lời chúc -->
+            <div class="wish">Chúc mẹ 20/10 vui vẻ, lúc nào cũng xinh đẹp, có thật nhiều may mắn và nhiều niềm vui trong cuộc sống nha.</div> <!-- Lời chúc -->
         </div>
         <div class="rose">
             <div class="flower">
