--- a/index.html
+++ b/index.html
@@ -165,7 +165,6 @@
     }
 
     @keyframes yidon {
-
       0%,
       100% {
         transform: translateY(0);
@@ -200,14 +199,11 @@
     .footer-text {
       position: absolute;
       /* Định vị tuyệt đối */
-      bottom: 50px;
-      /* Cách dưới 20px */
-      right: 50px;
-      /* Cách phải 20px */
-      font-size: 12px;
-      /* Kích thước chữ nhỏ */
-      font-weight: bold;
-      /* Tô đậm chữ */
+      bottom: 50px; /* Cách dưới 50px */
+      right: 50px; /* Cách phải 50px */
+      font-size: 12px; /* Kích thước chữ nhỏ */
+      font-weight: bold; /* Tô đậm chữ */
+      margin-bottom: 20px; /* Khoảng cách dưới là 20px */
     }
   </style>
 </head>
