--- a/index.html
+++ b/index.html
@@ -51,14 +51,10 @@
     }
 
     .wish {
-      font-size: 24px;
-      /* Kích thước chữ nhỏ hơn cho lời chúc */
-      color: #FE7696;
-      /* Màu chữ của lời chúc */
-      text-align: center;
-      /* Căn giữa nội dung lời chúc */
-      margin-bottom: 10px;
-      /* Khoảng cách dưới cho lời chúc */
+      font-size: 24px; /* Kích thước chữ nhỏ hơn cho lời chúc */
+      color: #FE7696; /* Màu chữ của lời chúc */
+      text-align: center; /* Căn giữa nội dung lời chúc */
+      margin-bottom: 20px; /* Khoảng cách dưới cho lời chúc */
     }
 
     .rose {
@@ -69,7 +65,7 @@
       left: 45%;
       /* Căn giữa theo chiều ngang */
       bottom: 130px;
-      /* Cách dưới 70px */
+      /* Cách dưới 130px */
       transform: translate(-50%, 0);
       /* Dịch chuyển sang trái 50% chiều rộng của bông hoa để căn giữa */
       animation: yidon 3s infinite;
@@ -199,11 +195,14 @@
     .footer-text {
       position: absolute;
       /* Định vị tuyệt đối */
-      bottom: 50px; /* Cách dưới 50px */
-      right: 50px; /* Cách phải 50px */
-      font-size: 12px; /* Kích thước chữ nhỏ */
-      font-weight: bold; /* Tô đậm chữ */
-      margin-bottom: 20px; /* Khoảng cách dưới là 20px */
+      bottom: 50px;
+      /* Cách dưới 50px */
+      right: 50px;
+      /* Cách phải 50px */
+      font-size: 12px;
+      /* Kích thước chữ nhỏ */
+      font-weight: bold;
+      /* Tô đậm chữ */
     }
   </style>
 </head>
