--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       font-size: 24px; /* Kích thước chữ nhỏ hơn cho lời chúc */
       color: #FE7696; /* Màu chữ của lời chúc */
       text-align: center; /* Căn giữa nội dung lời chúc */
-      margin-bottom: 20px; /* Khoảng cách dưới cho lời chúc */
+      margin-bottom: 10px; /* Khoảng cách dưới cho lời chúc */
     }
 
     .rose {
@@ -64,8 +64,7 @@
       /* Đặt bông hoa ở vị trí tuyệt đối */
       left: 45%;
       /* Căn giữa theo chiều ngang */
-      bottom: 130px;
-      /* Cách dưới 130px */
+      bottom: 150px; /* Thay đổi thành 150px để tạo khoảng cách 20px từ chữ đến đầu bông hoa */
       transform: translate(-50%, 0);
       /* Dịch chuyển sang trái 50% chiều rộng của bông hoa để căn giữa */
       animation: yidon 3s infinite;
@@ -195,14 +194,10 @@
     .footer-text {
       position: absolute;
       /* Định vị tuyệt đối */
-      bottom: 50px;
-      /* Cách dưới 50px */
-      right: 50px;
-      /* Cách phải 50px */
-      font-size: 12px;
-      /* Kích thước chữ nhỏ */
-      font-weight: bold;
-      /* Tô đậm chữ */
+      bottom: 50px; /* Cách dưới 50px */
+      right: 50px; /* Cách phải 50px */
+      font-size: 12px; /* Kích thước chữ nhỏ */
+      font-weight: bold; /* Tô đậm chữ */
     }
   </style>
 </head>
