--- a/index.html
+++ b/index.html
@@ -11,64 +11,44 @@
       background: #fadede;
       display: flex;
       justify-content: center;
-      /* Căn giữa theo chiều ngang */
       align-items: center;
-      /* Căn giữa theo chiều dọc */
       height: 100vh;
-      /* Chiều cao 100% viewport */
       margin: 0;
-      /* Loại bỏ margin mặc định của body */
-      position: relative;
-      /* Cần thiết cho định vị tuyệt đối */
       color: white;
-      /* Màu chữ mặc định là trắng */
       font-family: Aharoni, sans-serif;
-      /* Đổi font chữ thành Aharoni */
     }
 
     .container {
-      width: 800px;
-      height: 700px;
-      /* Tăng chiều cao của container lên 500px */
+      width: 90%;
+      max-width: 800px;
+      height: auto;
       display: flex;
-      /* Sử dụng flexbox để căn giữa nội dung con */
       align-items: center;
-      /* Căn giữa theo chiều dọc trong container */
       flex-direction: column;
-      /* Đặt hướng của flex là cột */
       position: relative;
-      /* Thay đổi thành relative để dễ dàng điều chỉnh */
+      padding: 20px;
+      text-align: center;
     }
 
     h1 {
       font-family: 'Sacramento', cursive;
       color: #FE7696;
       font-size: 64px;
-      text-align: center;
-      /* Căn giữa nội dung h1 */
-      flex: 1;
-      /* Để h1 chiếm không gian có sẵn */
+      margin-bottom: 20px;
     }
 
     .wish {
-      font-size: 24px; /* Kích thước chữ nhỏ hơn cho lời chúc */
-      color: #FE7696; /* Màu chữ của lời chúc */
-      text-align: center; /* Căn giữa nội dung lời chúc */
-      margin-bottom: 10px; /* Khoảng cách dưới cho lời chúc */
+      font-size: 24px;
+      color: #FE7696;
+      margin-bottom: 50px;
     }
 
     .rose {
-      width: 200px;
+      width: 100px;
       height: 200px;
-      position: absolute;
-      /* Đặt bông hoa ở vị trí tuyệt đối */
-      left: 45%;
-      /* Căn giữa theo chiều ngang */
-      bottom: 150px; /* Thay đổi thành 150px để tạo khoảng cách 20px từ chữ đến đầu bông hoa */
-      transform: translate(-50%, 0);
-      /* Dịch chuyển sang trái 50% chiều rộng của bông hoa để căn giữa */
+      margin-bottom: 0px;
+      position: relative;
       animation: yidon 3s infinite;
-      /* Giảm thời gian hoạt ảnh */
     }
 
     .petal {
@@ -167,7 +147,6 @@
 
       50% {
         transform: translateY(-5px);
-        /* Giảm khoảng cách di chuyển */
       }
     }
 
@@ -193,21 +172,18 @@
 
     .footer-text {
       position: absolute;
-      /* Định vị tuyệt đối */
-      bottom: 50px; /* Cách dưới 50px */
-      right: 50px; /* Cách phải 50px */
-      font-size: 12px; /* Kích thước chữ nhỏ */
-      font-weight: bold; /* Tô đậm chữ */
+      bottom: 20px;
+      right: 20px;
+      font-size: 12px;
+      font-weight: bold;
     }
   </style>
 </head>
 
 <body onclick="location.reload();">
   <div class="container">
-    <div class="letter">
-      <h1>Happy Vietnamese Women's Day</h1>
-      <div class="wish">Chúc mẹ 20/10 vui vẻ, lúc nào cũng xinh đẹp, có thật nhiều may mắn và nhiều niềm vui trong cuộc sống nha.</div> <!-- Lời chúc -->
-    </div>
+    <h1>Happy Vietnamese Women's Day</h1>
+    <div class="wish">Chúc mẹ 20/10 vui vẻ, lúc nào cũng xinh đẹp, có thật nhiều may mắn và nhiều niềm vui trong cuộc sống nha.</div>
     <div class="rose">
       <div class="flower">
         <div class="petal"></div>
@@ -223,7 +199,7 @@
       </div>
     </div>
   </div>
-  <div class="footer-text">/ngvkhoa/</div> <!-- Dòng chữ nhỏ ở góc dưới bên phải -->
+  <div class="footer-text">/ngvkhoa/</div>
 </body>
 
 </html>
